--- a/arch/arm/configs/mm_v7_defconfig
+++ b/arch/arm/configs/mm_v7_defconfig
@@ -169,13 +169,12 @@ CONFIG_REGULATOR_MC13892=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_V4L_PLATFORM_DRIVERS=y
+CONFIG_VIDEO_TW28XX=y
 CONFIG_SOC_CAMERA=y
-CONFIG_SOC_CAMERA_PLATFORM=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_CODA=y
 CONFIG_VIDEO_MEM2MEM_DEINTERLACE=y
 # CONFIG_MEDIA_SUBDRV_AUTOSELECT is not set
-CONFIG_VIDEO_TW2804=y
 # CONFIG_DVB_AU8522_V4L is not set
 # CONFIG_DVB_TUNER_DIB0070 is not set
 # CONFIG_DVB_TUNER_DIB0090 is not set
@@ -202,6 +201,7 @@ CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_SSI=y
 CONFIG_SND_SOC_IMX_AUDMUX=y
 CONFIG_SND_IMX_SOC=y
+CONFIG_SND_SOC_TW28XX=y
 CONFIG_SND_SOC_WM8753=y
 CONFIG_SND_SIMPLE_CARD=y
 # CONFIG_HID_GENERIC is not set
