--- a/drivers/media/platform/Kconfig
+++ b/drivers/media/platform/Kconfig
@@ -114,6 +114,12 @@ config VIDEO_S3C_CAMIF
 	  To compile this driver as a module, choose M here: the module
 	  will be called s3c-camif.
 
+config VIDEO_TW28XX
+	tristate "Techwell/Intersil TW28xx Quad Video decoder"
+	depends on VIDEO_V4L2 && MFD_TW28XX
+	help
+	  Support for the Techwell TW28XX Quad video decoder.
+
 source "drivers/media/platform/soc_camera/Kconfig"
 source "drivers/media/platform/exynos4-is/Kconfig"
 source "drivers/media/platform/am437x/Kconfig"
