--- a/arch/arm/configs/mm_v7_defconfig
+++ b/arch/arm/configs/mm_v7_defconfig
@@ -38,6 +38,8 @@ CONFIG_THUMB2_KERNEL=y
 CONFIG_HIGHMEM=y
 CONFIG_UACCESS_WITH_MEMCPY=y
 # CONFIG_ATAGS is not set
+CONFIG_CPU_FREQ=y
+CONFIG_ARM_IMX6Q_CPUFREQ=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_ARM_CPUIDLE=y
@@ -191,6 +193,9 @@ CONFIG_W1_MASTER_MXC=y
 CONFIG_W1_SLAVE_SMEM=y
 CONFIG_POWER_AVS=y
 # CONFIG_HWMON is not set
+CONFIG_THERMAL=y
+CONFIG_CPU_THERMAL=y
+CONFIG_IMX_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_DA9063_WATCHDOG=y
 CONFIG_IMX2_WDT=y
@@ -206,8 +211,6 @@ CONFIG_REGULATOR_MC13892=y
 CONFIG_REGULATOR_TPS65910=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
-CONFIG_MEDIA_CONTROLLER=y
-CONFIG_VIDEO_V4L2_SUBDEV_API=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
 # CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
@@ -288,10 +291,6 @@ CONFIG_IMX_SDMA=y
 CONFIG_MXS_DMA=y
 # CONFIG_MX3_IPU is not set
 # CONFIG_VIRTIO_MENU is not set
-CONFIG_STAGING=y
-CONFIG_STAGING_MEDIA=y
-CONFIG_VIDEO_IMX_MEDIA=y
-# CONFIG_VIDEO_IMX_CSI is not set
 CONFIG_HWSPINLOCK=y
 CONFIG_MAILBOX=y
 CONFIG_IMX_MBOX=y
