Remove TW28xx, Add vivante DRM

--- a/arch/arm/configs/mm_v7_defconfig
+++ b/arch/arm/configs/mm_v7_defconfig
@@ -193,7 +193,6 @@ CONFIG_W1_MASTER_MXC=y
 CONFIG_W1_SLAVE_SMEM=y
 CONFIG_POWER_AVS=y
 # CONFIG_HWMON is not set
-CONFIG_THERMAL=y
 CONFIG_CPU_THERMAL=y
 CONFIG_IMX_THERMAL=y
 CONFIG_WATCHDOG=y
@@ -222,8 +221,8 @@ CONFIG_IMX_IPUV3_CORE=y
 CONFIG_DRM=y
 CONFIG_DRM_IMX=y
 CONFIG_DRM_IMX_PARALLEL_DISPLAY=y
-CONFIG_DRM_IMX_TVE=y
 CONFIG_DRM_IMX_LDB=y
+CONFIG_DRM_ETNAVIV=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 # CONFIG_LCD_CLASS_DEVICE is not set
 # CONFIG_BACKLIGHT_GENERIC is not set
@@ -318,7 +317,6 @@ CONFIG_NTFS_FS=y
 CONFIG_NTFS_RW=y
 # CONFIG_PROC_SYSCTL is not set
 # CONFIG_PROC_PAGE_MONITOR is not set
-CONFIG_TMPFS=y
 CONFIG_UBIFS_FS=y
 CONFIG_UBIFS_FS_ADVANCED_COMPR=y
 # CONFIG_UBIFS_FS_XATTR is not set
