--- a/arch/arm/configs/mm_v7_defconfig
+++ b/arch/arm/configs/mm_v7_defconfig
@@ -6,8 +6,7 @@ CONFIG_POSIX_MQUEUE=y
 CONFIG_NO_HZ_IDLE=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_PREEMPT=y
-CONFIG_LOG_BUF_SHIFT=14
-CONFIG_LOG_CPU_MAX_BUF_SHIFT=14
+CONFIG_LOG_CPU_MAX_BUF_SHIFT=0
 CONFIG_PRINTK_SAFE_LOG_BUF_SHIFT=12
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_GZIP is not set
@@ -81,8 +80,6 @@ CONFIG_CAN=y
 # CONFIG_CAN_BCM is not set
 # CONFIG_CAN_GW is not set
 CONFIG_CAN_FLEXCAN=y
-CONFIG_CAN_C_CAN=y
-CONFIG_CAN_C_CAN_PLATFORM=y
 CONFIG_CAN_MCP251X=y
 # CONFIG_WIRELESS is not set
 CONFIG_UEVENT_HELPER_PATH="/sbin/mdev"
@@ -103,6 +100,7 @@ CONFIG_MTD_NAND_MXC=y
 CONFIG_MTD_SPI_NOR=y
 # CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
 CONFIG_MTD_UBI=y
+CONFIG_MTD_UBI_BLOCK=y
 CONFIG_OF_OVERLAY=y
 CONFIG_BLK_DEV_RAM=y
 CONFIG_BLK_DEV_RAM_COUNT=1
@@ -207,7 +205,6 @@ CONFIG_REGULATOR_ANATOP=y
 CONFIG_REGULATOR_DA9063=y
 CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_MC13892=y
-CONFIG_REGULATOR_TPS65910=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_USB_SUPPORT=y
