--- a/arch/arm/configs/mm_v4_v5_defconfig
+++ b/arch/arm/configs/mm_v4_v5_defconfig
@@ -144,16 +144,8 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_CLPS711X=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_GPIO_POLLED=y
-CONFIG_KEYBOARD_IMX=y
 # CONFIG_INPUT_MOUSE is not set
-CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_ADS7846=y
-CONFIG_TOUCHSCREEN_WM97XX=y
-# CONFIG_TOUCHSCREEN_WM9705 is not set
-# CONFIG_TOUCHSCREEN_WM9712 is not set
-CONFIG_TOUCHSCREEN_MC13783=y
 CONFIG_INPUT_MISC=y
-CONFIG_INPUT_MC13783_PWRBUTTON=y
 CONFIG_INPUT_GPIO_BEEPER=y
 # CONFIG_SERIO is not set
 # CONFIG_VT is not set
@@ -200,6 +192,7 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=y
+# CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV is not set
 # CONFIG_USB_GSPCA is not set
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_CODA=y
@@ -232,8 +225,10 @@ CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_MC13783=y
 CONFIG_SND_SOC_AC97_CODEC=y
 CONFIG_SND_SIMPLE_CARD=y
+# CONFIG_HID is not set
+# CONFIG_USB_HID is not set
 CONFIG_USB=y
-CONFIG_USB_LEDS_TRIGGER_USBPORT=y
+CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_MXC=y
 CONFIG_USB_STORAGE=y
