--- a/arch/arm/configs/mm_v7_defconfig
+++ b/arch/arm/configs/mm_v7_defconfig
@@ -157,11 +157,8 @@ CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_GPIO=y
 CONFIG_KEYBOARD_IMX=y
 # CONFIG_INPUT_MOUSE is not set
-CONFIG_INPUT_TOUCHSCREEN=y
-CONFIG_TOUCHSCREEN_MC13783=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_GPIO_BEEPER=y
-CONFIG_INPUT_DA9063_ONKEY=y
 # CONFIG_SERIO is not set
 # CONFIG_VT is not set
 # CONFIG_UNIX98_PTYS is not set
@@ -243,10 +240,10 @@ CONFIG_SND_SOC_IMX_AUDMUX=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_WM8753=y
 CONFIG_SND_SIMPLE_CARD=y
-# CONFIG_HID_GENERIC is not set
+# CONFIG_HID is not set
+# CONFIG_USB_HID is not set
 CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
-# CONFIG_USB_DEFAULT_PERSIST is not set
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_MXC=y
 CONFIG_USB_STORAGE=y
